--- a/participant/stories/docs/pages/About.stories.mdx
+++ b/participant/stories/docs/pages/About.stories.mdx
@@ -1,9 +1,18 @@
 import About from "app/routes/$localAgency/recertify/about";
-import decoratorFunc from "../../../.storybook/preview";
+import { decoratorFunc } from "../../../.storybook/preview";
 import Layout from "app/components/Layout";
 import { Canvas, Meta, Story } from "@storybook/addon-docs";
 
-<Meta title="Docs/Pages/About" />
+<Meta
+  title="Docs/Pages/About"
+  parameters={{
+    viewMode: "docs",
+    previewTabs: {
+      canvas: { hidden: true },
+    },
+    decorators: [decoratorFunc],
+  }}
+/>
 
 ## Participant Form Flow
 
@@ -40,15 +49,23 @@ import { Canvas, Meta, Story } from "@storybook/addon-docs";
 
 # About Page
 
+### About this page:
+
+This page contains static content about the process. It's written at a very high level.
+
+### Considerations for other states:
+
+This page may not need to change even if you make changes to the rest of the flow, given how high level it is.
+
+### Development
+
 The About page describes the overall steps process using a USWDS / Trussworks [`<ProcessList>`](https://trussworks.github.io/react-uswds/?path=/story/components-processlist--process-list-default) component
 
 The contents of this page are controlled by two things -
 
-- The layout contained in [app/routes/$localAgency/recertify/about.tsx](../../participant/app/routes/%24localAgency/recertify/about.tsx)
-- The i18next strings for the `"About"` key in [public/locales/en/common.json](../../participant/public/locales/en/common.json)
+- The layout contained in [app/routes/$localAgency/recertify/about.tsx](participant/app/routes/%24localAgency/recertify/about.tsx)
+- The i18next strings for the `"About"` key in [public/locales/en/common.json](locales/en/common.json)
 
 <Canvas>
-  <Story name="About" decorators={decoratorFunc}>
-    {About()}
-  </Story>
+  <Story name="About">{About()}</Story>
 </Canvas>
