--- a/participant/stories/docs/pages/Contact.stories.mdx
+++ b/participant/stories/docs/pages/Contact.stories.mdx
@@ -1,9 +1,18 @@
 import Contact from "app/routes/$localAgency/recertify/contact";
-import decoratorFunc from "../../../.storybook/preview";
+import { decoratorFunc } from "../../../.storybook/preview";
 import Layout from "app/components/Layout";
 import { Canvas, Meta, Story } from "@storybook/addon-docs";
 
-<Meta title="Docs/Pages/Contact" />
+<Meta
+  title="Docs/Pages/Contact"
+  parameters={{
+    viewMode: "docs",
+    previewTabs: {
+      canvas: { hidden: true },
+    },
+    decorators: [decoratorFunc],
+  }}
+/>
 
 ## Participant Form Flow
 
@@ -40,6 +49,17 @@ import { Canvas, Meta, Story } from "@storybook/addon-docs";
 
 # Contact
 
+### About this page:
+
+We want staff to have a contact method in case there's issues with the submission.
+We also want to nudge participants to share any nutrition or life updates, but testing with Montana WIC recipients revealed participants might not always have an update to share.
+
+### Considerations for other states:
+
+Is there anything else you need to collect ahead of a recertification appointment?
+
+### Development
+
 The Contact page collects the phone number, and any additional comments for the individual completing the form.
 
 This page uses two [`<TextField>`](?path=/docs/components-input-textfield--text-input) components
@@ -47,11 +67,9 @@ to collect the phone and comment details, and stores it in the database in a `Su
 
 The contents of this page are controlled by two things -
 
-- The layout contained in [app/routes/$localAgency/recertify/contact.tsx](../../participant/app/routes/%24localAgency/recertify/contact.tsx)
-- The i18next strings for the `"Contact"` key in [public/locales/en/common.json](../../participant/public/locales/en/common.json)
+- The layout contained in [app/routes/$localAgency/recertify/contact.tsx](participant/app/routes/%24localAgency/recertify/contact.tsx)
+- The i18next strings for the `"Contact"` key in [public/locales/en/common.json](participant/public/locales/en/common.json)
 
 <Canvas>
-  <Story name="Contact" decorators={decoratorFunc}>
-    {Contact()}
-  </Story>
+  <Story name="Contact">{Contact()}</Story>
 </Canvas>
