--- a/participant/stories/docs/pages/Details.stories.mdx
+++ b/participant/stories/docs/pages/Details.stories.mdx
@@ -1,9 +1,18 @@
 import Details from "app/routes/$localAgency/recertify/details";
-import decoratorFunc from "../../../.storybook/preview";
+import { decoratorFunc } from "../../../.storybook/preview";
 import Layout from "app/components/Layout";
 import { Canvas, Meta, Story } from "@storybook/addon-docs";
 
-<Meta title="Docs/Pages/Details" />
+<Meta
+  title="Docs/Pages/Details"
+  parameters={{
+    viewMode: "docs",
+    previewTabs: {
+      canvas: { hidden: true },
+    },
+    decorators: [decoratorFunc],
+  }}
+/>
 
 ## Participant Form Flow
 
@@ -41,6 +50,16 @@ import { Canvas, Meta, Story } from "@storybook/addon-docs";
 
 # Details
 
+### About this page:
+
+Users fill out "participant cards" (a repeatable fieldset) to collect detailed information about participants who are recertifying. This info will both help staff find the participant in M-SPIRIT and ensure we request the right kinds of documents. Because WIC participants do not know their household ID and using EBT # would require additional steps for staff, we will rely on the participant's name and date of birth as the data points staff can use to look up the participant in M-SPIRIT. We ask adjunctive eligibility per participant since it's possible one participant has it and another doesn't.
+
+### Considerations for other states:
+
+If your state is able to surface who is recertifying, for example by using MIS data, then you can avoid this and the /count pages all together and instead surface to the user who is recertifying.
+
+### Development
+
 The Details page renders a number of [`<ParticipantCard>`](?path=/docs/components-participantcard--default) components, initially based on the `?count` parameter in the URL.
 
 Submitted details are stored in the database in a `SubmissionForm` record
@@ -48,11 +67,9 @@ Submitted details are stored in the database in a `SubmissionForm` record
 The contents of this page are controlled by three things -
 
 - The `?count` parameter in the URL **or** the number of existing participants in the database
-- The layout contained in [app/routes/$localAgency/recertify/details.tsx](../../participant/app/routes/%24localAgency/recertify/details.tsx)
-- The i18next strings for the `"Details"` key in [public/locales/en/common.json](../../participant/public/locales/en/common.json)
+- The layout contained in [app/routes/$localAgency/recertify/details.tsx](participant/app/routes/%24localAgency/recertify/details.tsx)
+- The i18next strings for the `"Details"` key in [public/locales/en/common.json](locales/en/common.json)
 
 <Canvas>
-  <Story name="Details" decorators={decoratorFunc}>
-    {Details()}
-  </Story>
+  <Story name="Details">{Details()}</Story>
 </Canvas>
