--- a/participant/stories/docs/pages/Index.stories.mdx
+++ b/participant/stories/docs/pages/Index.stories.mdx
@@ -1,9 +1,18 @@
 import Index from "app/routes/$localAgency/recertify/index";
-import decoratorFunc from "../../../.storybook/preview";
+import { decoratorFunc } from "../../../.storybook/preview";
 import Layout from "app/components/Layout";
 import { Canvas, Meta, Story } from "@storybook/addon-docs";
 
-<Meta title="Docs/Pages/Index" />
+<Meta
+  title="Docs/Pages/Index"
+  parameters={{
+    viewMode: "docs",
+    previewTabs: {
+      canvas: { hidden: true },
+    },
+    decorators: [decoratorFunc],
+  }}
+/>
 
 ## Participant Form Flow
 
@@ -42,7 +51,18 @@ import { Canvas, Meta, Story } from "@storybook/addon-docs";
 
 The Index page is the landing page for the application.
 
-Remix allows us to use URL parameters in our paths, so the file on our filesystem is [app/routes/$localAgency/recertify/index.tsx](../../participant/app/routes/%24localAgency/recertify/index.tsx)
+### About this page:
+
+This page contains static content about who is eligible to use this recertification portal.
+
+### Considerations for other states:
+
+We predict state agencies may make content and logo changes on this page
+Also, state agencies would need to remove the portal survey, or replace it with a new survey
+
+### Development
+
+Remix allows us to use URL parameters in our paths, so the file on our filesystem is [app/routes/$localAgency/recertify/index.tsx](../../../participant/app/routes/%24localAgency/recertify/index.tsx)
 
 The `$localAgency` parameter associates the participant's submission with a `LocalAgency` database record, using its `urlId` property.
 
@@ -50,11 +70,7 @@ Invalid `urlId` values will be redirected to the first database record in the `L
 
 The contents of this page are controlled by two things -
 
-- The layout contained in [app/routes/$localAgency/recertify/index.tsx](../../participant/app/routes/%24localAgency/recertify/index.tsx)
-- The i18next strings for the `"Index"` key in [public/locales/en/common.json](../../participant/public/locales/en/common.json)
+- The layout contained in [app/routes/$localAgency/recertify/index.tsx](participant/app/routes/%24localAgency/recertify/index.tsx)
+- The i18next strings for the `"Index"` key in [public/locales/en/common.json](locales/en/common.json)
 
-<Canvas>
-  <Story name="Index" decorators={decoratorFunc}>
-    {Index()}
-  </Story>
-</Canvas>
+<Story name="Index">{Index()}</Story>
