--- a/participant/stories/docs/pages/Name.stories.mdx
+++ b/participant/stories/docs/pages/Name.stories.mdx
@@ -1,9 +1,18 @@
 import Name from "app/routes/$localAgency/recertify/name";
-import decoratorFunc from "../../../.storybook/preview";
+import { decoratorFunc } from "../../../.storybook/preview";
 import Layout from "app/components/Layout";
 import { Canvas, Meta, Story } from "@storybook/addon-docs";
 
-<Meta title="Docs/Pages/Name" />
+<Meta
+  title="Docs/Pages/Name"
+  parameters={{
+    viewMode: "docs",
+    previewTabs: {
+      canvas: { hidden: true },
+    },
+    decorators: [decoratorFunc],
+  }}
+/>
 
 ## Participant Form Flow
 
@@ -40,6 +49,16 @@ import { Canvas, Meta, Story } from "@storybook/addon-docs";
 
 # Name
 
+### About this page:
+
+This page collects the PRP user's name, so WIC staff know who is filling out the form.
+
+### Considerations for other states:
+
+We assume all states will need to know who is filling out the form, so this page likely won't need major changes
+
+### Development
+
 The Name page collects the details for the individual completing the form.
 
 This page uses a [`<NameInput>`](?path=/docs/components-input-nameinput--preferred-name) component
@@ -47,11 +66,9 @@ to collect the name details, and stores it in the database in a `SubmissionForm`
 
 The contents of this page are controlled by two things -
 
-- The layout contained in [app/routes/$localAgency/recertify/name.tsx](../../participant/app/routes/%24localAgency/recertify/name.tsx)
-- The i18next strings for the `"Name"` and `"NameInput"` keys in [public/locales/en/common.json](../../participant/public/locales/en/common.json)
+- The layout contained in [app/routes/$localAgency/recertify/name.tsx](participant/app/routes/%24localAgency/recertify/name.tsx)
+- The i18next strings for the `"Name"` and `"NameInput"` keys in [public/locales/en/common.json](participant/public/locales/en/common.json)
 
 <Canvas>
-  <Story name="Name" decorators={decoratorFunc}>
-    {Name()}
-  </Story>
+  <Story name="Name">{Name()}</Story>
 </Canvas>
