--- a/participant/stories/docs/pages/Review.stories.mdx
+++ b/participant/stories/docs/pages/Review.stories.mdx
@@ -1,9 +1,18 @@
 import Review from "app/routes/$localAgency/recertify/review";
-import decoratorFunc from "../../../.storybook/preview";
+import { decoratorFunc } from "../../../.storybook/preview";
 import Layout from "app/components/Layout";
 import { Canvas, Meta, Story } from "@storybook/addon-docs";
 
-<Meta title="Docs/Pages/Review" />
+<Meta
+  title="Docs/Pages/Review"
+  parameters={{
+    viewMode: "docs",
+    previewTabs: {
+      canvas: { hidden: true },
+    },
+    decorators: [decoratorFunc],
+  }}
+/>
 
 ## Participant Form Flow
 
@@ -40,8 +49,14 @@ import { Canvas, Meta, Story } from "@storybook/addon-docs";
 
 # Review
 
+### About this page:
+
+We allow users to review their inputs and selections and offer them the choice to make any changes to their answers to ensure accuracy of the submitted information.
+
+### Development
+
 The Review page renders all previous page data stored in `SubmissionForm` (and a count of `Document` records) in
-a special component (not in Storybook) called a [`<SubmissionForm>`](../../participant/app/components/SubmissionForm.tsx)
+a special component (not in Storybook) called a [`<SubmissionForm>`](participant/app/components/SubmissionForm.tsx)
 
 Edit links are rendered, jumping the individual back to the appropriate form pages for [Name](?path=/docs/docs-pages-name--name), [Details](?path=/docs/docs-pages-details--details), [Changes](?path=/docs/docs-pages-changes--changes), [Upload](?path=/docs/docs-pages-upload--upload), or [Contact](?path=/docs/docs-pages-contact--contact)
 
@@ -51,12 +66,10 @@ from being made to the `Submission`, `SubmissionForm`, or `Document` for that `S
 The contents of this page are controlled by four things -
 
 - The database contents for `SubmissionForm` and `Documents`
-- The layout in the component [`<SubmissionForm>`](../../participant/app/components/SubmissionForm.tsx)
-- The layout contained in [app/routes/$localAgency/recertify/review.tsx](../../participant/app/routes/%24localAgency/recertify/review.tsx)
-- The i18next strings for the `"Review"` key in [public/locales/en/common.json](../../participant/public/locales/en/common.json)
+- The layout in the component [`<SubmissionForm>`](participant/app/components/SubmissionForm.tsx)
+- The layout contained in [app/routes/$localAgency/recertify/review.tsx](participant/app/routes/%24localAgency/recertify/review.tsx)
+- The i18next strings for the `"Review"` key in [public/locales/en/common.json](locales/en/common.json)
 
 <Canvas>
-  <Story name="Review" decorators={decoratorFunc}>
-    {Review()}
-  </Story>
+  <Story name="Review">{Review()}</Story>
 </Canvas>
