[PRP-347] Updating docs per feedback from Rocket

--- a/participant/stories/docs/Readme.stories.mdx
+++ b/participant/stories/docs/Readme.stories.mdx
@@ -11,4 +11,4 @@ import { Meta, Description } from "@storybook/addon-docs";
 
 # Next Steps
 
-- How to develop on the [Participant Portal](?path=/story/docs-%F0%9F%9B%A0%EF%B8%8F-development--page)
+- How to [develop](?path=/story/docs-%F0%9F%9B%A0%EF%B8%8F-development--page) on the Participant Portal
