--- a/participant/stories/docs/pages/Confirm.stories.mdx
+++ b/participant/stories/docs/pages/Confirm.stories.mdx
@@ -56,15 +56,13 @@ This page confirms the submission and shows content about next steps. It contain
 ### Considerations for states:
 
 - You may want to update next steps content with agency specific next steps.
-- You can replace your own survey link with your own to collect user feedback.
+- Replace the survey link with your own to collect user feedback.
 
 ### Development
 
-The Confirm page renders all previous page data stored in `SubmissionForm` (and a count of `Document` records) in
-a special component (not in Storybook) called a [`<SubmissionForm>`](participant/app/components/SubmissionForm.tsx)
+The Confirm page renders all previous page data stored in `SubmissionForm` (and a count of `Document` records) in a special component (not in Storybook) called a [`<SubmissionForm>`](participant/app/components/SubmissionForm.tsx)
 
-The applicant cannot edit this page, and navigation will ask the individual if they would like to reset their cookie
-to allow completing the form a second (or nth) time.
+Once the participant reaches this page, they are not longer able to edit any information. If they click the back button in their browser, an alert will appear asking the individual if they would like to reset their cookie to allow completing the form a second (or nth) time.
 
 The contents of this page are controlled by four things -
 
