--- a/participant/stories/docs/pages/Details.stories.mdx
+++ b/participant/stories/docs/pages/Details.stories.mdx
@@ -56,7 +56,7 @@ Users fill out "participant cards" (a repeatable fieldset) to collect detailed i
 
 ### Considerations for other states:
 
-If your state is able to surface who is recertifying, for example by using MIS data, then you can avoid this and the /count pages all together and instead surface to the user who is recertifying.
+- Replace the adjunctive eligibility question with the programs that qualify a participant for WIC adjunctive eligibility in your state
 
 ### Development
 
