--- a/participant/stories/docs/Readme.stories.mdx
+++ b/participant/stories/docs/Readme.stories.mdx
@@ -1,4 +1,4 @@
-import Readme from "../../../docs/participant/README.md";
+import Architecture from "../../../docs/participant/architecture.md";
 import { Meta, Description } from "@storybook/addon-docs";
 
 <Meta title="Docs/📝 Intro" />
@@ -7,7 +7,7 @@ import { Meta, Description } from "@storybook/addon-docs";
 
 ---
 
-<Description>{Readme}</Description>
+<Description>{Architecture}</Description>
 
 # Next Steps
 
