--- a/participant/stories/docs/pages/Contact.stories.mdx
+++ b/participant/stories/docs/pages/Contact.stories.mdx
@@ -49,16 +49,16 @@ import { Canvas, Meta, Story } from "@storybook/addon-docs";
 
 # Contact
 
-### About this page:
+## About This Page
 
 We want staff to have a contact method in case there's issues with the submission.
 We also want to nudge participants to share any nutrition or life updates, but testing with Montana WIC recipients revealed participants might not always have an update to share.
 
-### Considerations for other states:
+## Considerations for Other States
 
 Is there anything else you need to collect ahead of a recertification appointment? It's important to collect all necessary information, but be sure to balance that against collecting too much information. Asking participants to fill out excessively long forms or asking for sensitive PII may make participants reluctant to use the application.
 
-### Development
+## Development
 
 The Contact page collects the phone number, and any additional comments for the individual completing the form.
 
