--- a/participant/stories/docs/pages/Details.stories.mdx
+++ b/participant/stories/docs/pages/Details.stories.mdx
@@ -50,15 +50,15 @@ import { Canvas, Meta, Story } from "@storybook/addon-docs";
 
 # Details
 
-### About this page:
+## About This Page
 
 Users fill out "participant cards" (a repeatable fieldset) to collect detailed information about participants who are recertifying. This info will both help staff find the participant in M-SPIRIT and ensure we request the right kinds of documents. Because WIC participants do not know their household ID and using EBT # would require additional steps for staff, we will rely on the participant's name and date of birth as the data points staff can use to look up the participant in M-SPIRIT. We ask adjunctive eligibility per participant since it's possible one participant has it and another doesn't.
 
-### Considerations for other states:
+## Considerations for Other States
 
 - Replace the adjunctive eligibility question with the programs that qualify a participant for WIC adjunctive eligibility in your state
 
-### Development
+## Development
 
 The Details page renders a number of [`<ParticipantCard>`](?path=/docs/components-participantcard--default) components, initially based on the `?count` parameter in the URL.
 
