--- a/participant/stories/docs/pages/Name.stories.mdx
+++ b/participant/stories/docs/pages/Name.stories.mdx
@@ -49,15 +49,15 @@ import { Canvas, Meta, Story } from "@storybook/addon-docs";
 
 # Name
 
-### About this page:
+## About This Page
 
 This page collects the PRP user's name, so WIC staff know who is filling out the form.
 
-### Considerations for other states:
+## Considerations for Other States
 
 We assume all states will need to know who is filling out the form, so this page likely won't need major changes
 
-### Development
+## Development
 
 The Name page collects the details for the individual completing the form.
 
