--- a/participant/stories/docs/pages/Upload.stories.mdx
+++ b/participant/stories/docs/pages/Upload.stories.mdx
@@ -49,7 +49,7 @@ import { Canvas, Meta, Story } from "@storybook/addon-docs";
 
 # Upload
 
-### About this page:
+## About This Page
 
 ​​We use the participant's situation to determine which kinds of documents, if any, they need to provide:
 
@@ -57,12 +57,12 @@ import { Canvas, Meta, Story } from "@storybook/addon-docs";
 - If they moved, they need to provide proof of address.
 - If they changed their name and/or their previous ID doc expired, they need to provide new proof of identity.
 
-### Considerations for other states:
+## Considerations for Other States
 
 What are your policies around verifying identity and address?
 If you require documents in all scenarios, you may be able to simplify this document upload flow.
 
-### Development
+## Development
 
 The Upload page renders a [`<FileUploader>`](?path=/docs/components-input-fileuploader--default) component, as well as a separate group of [`<FilePreview>`](?path=/docs/components-filepreview--default) components for files previously uploaded. (The `<FileUploader>` component also contains `<FilePreview>` components for uploads done in the current page load)
 
