--- a/participant/stories/docs/pages/Changes.stories.mdx
+++ b/participant/stories/docs/pages/Changes.stories.mdx
@@ -49,16 +49,16 @@ import { Canvas, Meta, Story } from "@storybook/addon-docs";
 
 # Changes
 
-### About this page:
+## About This Page
 
 This question allows us to understand if something has changed with the WIC participant that would require them to upload new proof of address/identity docs. Montana WIC only requires documentation if these two scenarios have changed, or if any participant lacks adjunctive eligibility.
 
-### Considerations for other states:
+## Considerations for Other States
 
 When do you require recertifying WIC participants to upload documents? If only certain scenarios, what questions can you replace with these to understand those participants?
 For states that always require documents during recertification, are these questions helpful for local staff? Or, can you remove these questions and logic altogether?
 
-### Development
+## Development
 
 The Changes page renders two [`<ChoiceGroupInput>`](?path=/docs/components-input-choicegroupinput--radio-group) components with yes / no questions
 
